Fixed a crash issue Added missing icon files Fixed Warnings

--- a/LaunchScreen.xib
+++ b/LaunchScreen.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,18 +15,18 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oll24.png" translatesAutoresizingMaskIntoConstraints="NO" id="4sO-tS-qTB">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="oll37.png" translatesAutoresizingMaskIntoConstraints="NO" id="4sO-tS-qTB">
                     <rect key="frame" x="189" y="189" width="102" height="102"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="102" id="YBf-pY-vap"/>
-                        <constraint firstAttribute="width" constant="102" id="Zyn-PH-Kaw"/>
+                        <constraint firstAttribute="height" constant="102" id="ndP-Vd-XCN"/>
+                        <constraint firstAttribute="width" constant="102" id="so9-ZM-h8h"/>
                     </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.19545632600784302" green="0.52003169059753418" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="4sO-tS-qTB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="GKt-DO-BSa"/>
-                <constraint firstItem="4sO-tS-qTB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="rgK-5O-Ksh"/>
+                <constraint firstItem="4sO-tS-qTB" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="NYv-Wo-kWU"/>
+                <constraint firstItem="4sO-tS-qTB" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ffA-7w-C72"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -34,6 +34,6 @@
         </view>
     </objects>
     <resources>
-        <image name="oll24.png" width="204" height="204"/>
+        <image name="oll37.png" width="204" height="204"/>
     </resources>
 </document>
